@@ -34,6 +34,8 @@ inputs:
     default: 'networkx'
   numpy:
     default: 'numpy'
+  packaging:
+    default: 'packaging'
   pip:
     default: 'pip'
   pytest:
@@ -95,6 +97,7 @@ runs:
           ${{ inputs.mmtf-python }}
           ${{ inputs.networkx }}
           ${{ inputs.numpy }}
+          ${{ inputs.packaging }}
           ${{ inputs.pip }}
           ${{ inputs.pytest }}
           ${{ inputs.scipy }}
